--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,25 @@ name: CI
 on: [push, pull_request]
 
 jobs:
+  lint:
+    name: Linting with Go ${{ matrix.go-version }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        go-version: [1.18.x]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: ${{ matrix.go-version }}
+    - name: golangci-lint
+      env:
+        GOFLAGS: -tags=functional
+      uses: golangci/golangci-lint-action@v2
+      with:
+        version: v1.45.2
   test:
     name: Go ${{ matrix.go-version }} with Kafka ${{ matrix.kafka-version }} on Ubuntu
     runs-on: ubuntu-latest
@@ -55,9 +74,6 @@ jobs:
 
     - name: Run test suite
       run: make test
-
-    - name: Run linter
-      run: make lint
 
     - name: Teardown
       run: vagrant/halt_cluster.sh
