--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       fail-fast: false
       matrix:
         go-version: [1.18.x]
-        kafka-version: [2.4.1, 2.5.0]
+        kafka-version: [2.4.1, 2.5.0, 2.8.0]
         platform: [ubuntu-latest]
 
     env:
